# BigInt

./: .gitignore  CMakeLists.txt  README.md
include/: BigInt.h
src/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_BigInt.cpp
